; ModuleID = '/home/carl/AnghaBench/i3/src/extr_handlers.c_add_ignore_event.c'
source_filename = "/home/carl/AnghaBench/i3/src/extr_handlers.c_add_ignore_event.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Ignore_Event = type { i32, i32, i32 }

@ignore_events = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @add_ignore_event(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.Ignore_Event*, align 8
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %6 = call %struct.Ignore_Event* @smalloc(i32 12)
  store %struct.Ignore_Event* %6, %struct.Ignore_Event** %5, align 8
  %7 = load i32, i32* %3, align 4
  %8 = load %struct.Ignore_Event*, %struct.Ignore_Event** %5, align 8
  %9 = getelementptr inbounds %struct.Ignore_Event, %struct.Ignore_Event* %8, i32 0, i32 0
  store i32 %7, i32* %9, align 4
  %10 = load i32, i32* %4, align 4
  %11 = load %struct.Ignore_Event*, %struct.Ignore_Event** %5, align 8
  %12 = getelementptr inbounds %struct.Ignore_Event, %struct.Ignore_Event* %11, i32 0, i32 1
  store i32 %10, i32* %12, align 4
  %13 = call i32 @time(i32* null)
  %14 = load %struct.Ignore_Event*, %struct.Ignore_Event** %5, align 8
  %15 = getelementptr inbounds %struct.Ignore_Event, %struct.Ignore_Event* %14, i32 0, i32 2
  store i32 %13, i32* %15, align 4
  %16 = load %struct.Ignore_Event*, %struct.Ignore_Event** %5, align 8
  %17 = load i32, i32* @ignore_events, align 4
  %18 = call i32 @SLIST_INSERT_HEAD(i32* @ignore_events, %struct.Ignore_Event* %16, i32 %17)
  ret void
}

declare dso_local %struct.Ignore_Event* @smalloc(i32) #1

declare dso_local i32 @time(i32*) #1

declare dso_local i32 @SLIST_INSERT_HEAD(i32*, %struct.Ignore_Event*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
